--- a/client/public/stylesheets/main.css
+++ b/client/public/stylesheets/main.css
@@ -5,12 +5,30 @@
   margin: 50px auto;
 }
 
+form {
+  width: 600px;
+  padding: 20px;
+  background: #eee;
+  margin: 50px auto;
+}
+
+form label {
+  display: block;
+  margin-bottom: 5px;
+  margin-top: 10px;
+}
+
+input, textarea {
+  width: 300px;
+  padding: 5px;
+}
+
 .comment {
   padding-bottom: 20px;
 }
 
 .comment p {
-  margin-left: 65px; 
+  margin-left: 65px;
 }
 
 .comment .image {
@@ -20,4 +38,8 @@
 
 .replies {
   padding-left: 100px;
+}
+
+a.show-more {
+  color: #5566cc;
 }
